Update Post Draft _config.yml by Qexo

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 烙饼的碎碎念
+title: 烙饼的小说站
 subtitle: '只是碎碎念罢了'
 description: '但碎碎念尔'
 keywords:
